add delete file by id
