# controller/files.go
@@ -20,7 +20,7 @@ func GetFiles(ctx context.Context, s string, page int, pagesize int, l *log.Logg
 		return nil, err
 	}
 
-	res, err := dal.SearchFilesByPartName(s,page, pagesize, db, l)
+	res, err := dal.SearchFilesByPartName(s, page, pagesize, db, l)
 	if err != nil {
 		l.Sugar().Errorf(err.Error())
 		return nil, err
@@ -62,5 +62,23 @@ func PostFiles(ctx context.Context, f *models.Files, l *log.Logger) error {
 		return err
 	}
 	l.Info(fmt.Sprintf("PostFiles processing time: %v", time.Since(start)))
+	return nil
+}
+
+func DeleteFile(ctx context.Context, fileid int64, l *log.Logger) error {
+	start := time.Now()
+
+	db, err := dal.Connect(l)
+	if err != nil {
+		l.Sugar().Errorf(err.Error())
+		return err
+	}
+
+	err = dal.DeleteFile(fileid, db, l)
+	if err != nil {
+		l.Sugar().Errorf(err.Error())
+		return err
+	}
+	l.Info(fmt.Sprintf("delete file processing time: %v", time.Since(start)))
 	return nil
 }
