# gen/restapi/configure_kbds_ref_restapi.go
@@ -80,6 +80,15 @@ func configureAPI(api *operations.KbdsRefRestapiAPI) http.Handler {
 		return operations.NewSearchOK().WithPayload(*files.ToResource())
 	})
 
+	api.DeleteHandler = operations.DeleteHandlerFunc(func(params operations.DeleteParams) middleware.Responder {
+		err := controller.DeleteFile(context.Background(), params.Fileid, l)
+		if err != nil {
+			msg := err.Error()
+			return operations.NewDeleteDefault(500).WithPayload(&genmodels.Error{Message: &msg})
+		}
+		return operations.NewDeleteOK()
+	})
+
 	api.DuplicatesHandler = operations.DuplicatesHandlerFunc(func(params operations.DuplicatesParams) middleware.Responder {
 		var finfos models.Files
 		for _, finfo := range params.Finfos {
